force-app/main/default/objects/SCOC__NameOrAliasList__c/SCOC__NameOrAliasList__c.object-meta.xml
<CustomObject>
    <description>Response Entity Name or Alias List</description>
    <label>Name or Alias</label>
    <nameField>
        <displayFormat>NOA-{00000}</displayFormat>
        <label>Name or Alias Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Names or Aliases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>