force-app/main/default/objects/SCOC__NameOrAliasList__c/fields/SCOC__Age__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Age__c</fullName>
    <description>Age</description>
    <label>Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>