force-app/main/default/objects/SCOC__NameOrAliasList__c/fields/SCOC__BirthYear__c.field-meta.xml
<CustomField>
    <fullName>SCOC__BirthYear__c</fullName>
    <description>The system populates this optional rich text field to display the Name or Alias year of birth.</description>
    <label>Year of Birth</label>
    <length>4</length>
    <type>Text</type>
</CustomField>