force-app/main/default/objects/SCOC__NameOrAliasList__c/fields/SCOC__dateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>SCOC__dateOfBirth__c</fullName>
    <description>Date of Birth</description>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>