force-app/main/default/objects/SCOC__NameOrAliasList__c/fields/SCOC__forename__c.field-meta.xml
<CustomField>
    <fullName>SCOC__forename__c</fullName>
    <description>Forename</description>
    <label>Forename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>