force-app/main/default/objects/SCOC__NameOrAliasList__c/fields/SCOC__FullName__c.field-meta.xml
<CustomField>
    <fullName>SCOC__FullName__c</fullName>
    <description>Full Name.</description>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>