force-app/main/default/objects/SCOC__NameOrAliasList__c/fields/SCOC__MiddleName__c.field-meta.xml
<CustomField>
    <fullName>SCOC__MiddleName__c</fullName>
    <description>Middle Name</description>
    <label>Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>