force-app/main/default/objects/SCOC__NameOrAliasList__c/fields/SCOC__Source__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Source__c</fullName>
    <description>The system automatically populates this optional text field to indicate the Name or Alias Source from the vendor response. By default, it is null.</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>