force-app/main/default/objects/SCOC__NameOrAliasList__c/fields/SCOC__Suffix__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Suffix__c</fullName>
    <description>Suffix</description>
    <label>Suffix</label>
    <length>15</length>
    <type>Text</type>
</CustomField>