force-app/main/default/objects/SCOC__NameOrAliasList__c/fields/SCOC__surname__c.field-meta.xml
<CustomField>
    <fullName>SCOC__surname__c</fullName>
    <description>Surname</description>
    <label>Surname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>