force-app/main/default/objects/SCOC__NameOrAliasList__c/fields/SCOC__title__c.field-meta.xml
<CustomField>
    <fullName>SCOC__title__c</fullName>
    <description>Title</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>