force-app/main/default/objects/SCOC__NameOrAliasList__c/fields/SCOC__TypeCode__c.field-meta.xml
<CustomField>
    <fullName>SCOC__TypeCode__c</fullName>
    <description>Type Code</description>
    <label>Type Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>