force-app/main/default/objects/SCOC__NameOrAliasList__c/fields/SCOC__YearOfBirth__c.field-meta.xml
<CustomField>
    <fullName>SCOC__YearOfBirth__c</fullName>
    <description>Year of birth -D</description>
    <label>Year Of Birth -D</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>